went back and re-formatted, added a container div around article and used grid for easier media queries. Solved my problem of the wrapper stretching past the image on mobile, but now trying to get the image to fit the container on desktop.

--- a/style.css
+++ b/style.css
@@ -103,10 +103,10 @@
 
     /* Font Sizes */
     --fs-300: 0.875rem;
-    --fs-400: 1.25rem;
-    --fs-500: 1.5rem;
-    --fs-600: 1.75rem;
-    --fs-700: 2rem;
+    --fs-400: 1rem;
+    --fs-500: 1.125rem;
+    --fs-600: 1.25rem;
+    --fs-700: 1.375rem;
   }
 
   html {
@@ -116,21 +116,34 @@
 
   body {
     background-color: var(--cream);
-    display: flex;
-    flex-direction: column;
     padding: 2em;
   }
 
   .wrapper {
-    background-color: var(--white);
     max-width: 100%;
-    border-radius: 1em;
-    padding-bottom: 2em;
+    padding: 1rem;
     margin: 0 auto;
   }
 
-  img {
+  .container {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 2em;
+  }
+
+  .perfume {
+    background-color: var(--white);
+    padding-block-end: 2em;
+    border-radius: 1em;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+  }
+
+  .perfume img {
+    grid-row: 1/2;
     width: 100%;
+    height: 100%;
     block-size: auto;
     object-fit: cover;
     border-top-left-radius: 1em;
@@ -138,13 +151,11 @@
     margin-bottom: 1em;
   }
 
-  .text-box {
-    display: grid;
+  .text {
     padding: 0 1.5em;
   }
 
   h1 {
-    grid-column: 1;
     font-family: var(--font-montserrat);
     font-weight: 500;
     font-size: var(--fs-400);
@@ -154,7 +165,6 @@
   }
 
   h2 {
-    grid-column: 1/2;
     font-family: var(--font-fraunces);
     font-weight: 700;
     font-size: var(--fs-700);
@@ -163,36 +173,35 @@
   }
 
   p {
-    grid-row: 3;
     font-family: var(--font-montserrat);
     font-size: var(--fs-300);
     color: var(--gray);
     padding: 0.25em 0;
   }
 
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.85em;
+  }
+
   .regular {
-    grid-row: 4;
-    grid-column: 1;
     font-family: var(--font-fraunces);
-    font-weight: 700;
-    font-size: var(--fs-700);
     color: var(--green-500);
+    font-size: var(--fs-700);
   }
 
   .line-thru {
-    grid-row: 4;
-    grid-column: 1;
-    padding-top: 1.5em;
-    padding-left: 10em;
-    font-family: var(--font-montserrat);
-    font-weight: 400;
-    font-size: var(--fs-300);
     color: var(--gray);
     text-decoration: line-through;
+    padding-top: 0.5em;
   }
 
   button {
-    grid-row: 5;
+    width: 95%;
     background-color: var(--green-500);
     color: var(--white);
     font-family: var(--font-montserrat);
@@ -200,13 +209,15 @@
     border: none;
     border-radius: 0.5em;
     padding: 1em;
+    margin-top: 1em;
   }
 
   .cart {
     background-image: url(./images/icon-cart.svg);
-    background-position: 4em;
+    /* background-attachment: local; */
+    background-position: 25%;
     background-repeat: no-repeat;
-    background-size: 0.875em;
+    background-size: 15px;
   }
 
   .attribution {
@@ -223,5 +234,24 @@
   }
 
   @media (width > 720px) {
+
+  .wrapper {
+    padding: 4em;
+  }
+
+  h1 {
+
+  }
+   .perfume {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2em;;
+   }
+
+   .perfume img {
+    grid-row: auto;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 1em;
+   }
   }
 }
